Fix headline text overflow.

--- a/scss/partials/_activity_card.scss
+++ b/scss/partials/_activity_card.scss
@@ -182,6 +182,7 @@ div.activity-card {
       text-overflow: ellipsis;
       width: 100%;
       overflow: hidden;
+      white-space: pre;
       max-height: 28px;
 
       &.has-headline {
